# skinask-django

./: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  requirements.txt
skinask_backend/: wsgi.py
skinask_backend/settings/: base.py  dev.py
skinask_backend/templates/: base.html
static/: staticfiles.json
static/wagtailadmin/js/: bulk-actions.js  core.js  draftail.js  sidebar.4e42b3624295.js  userbar.js  vendor.60167f32811b.js  wagtailadmin.js  workflow-action.c5773c26b395.js
static/wagtailadmin/js/telepath/: telepath.563022e43ea3.js  widgets.e2ac1c6012cb.js
static/wagtaildocs/js/: add-multiple.js
static/wagtailimages/js/: add-multiple.8affadb886dc.js  image-block.b923d17fcf57.js
static/wagtailsnippets/js/: snippet-chooser-telepath.786082186846.js  snippet-chooser.js
